- Alteração do campo de filtro de cores para apresentar, juntamente com o nome, o código da cor;

--- a/src/SITE/ProductCategoryBundle/Resources/views/Default/search.html.twig
+++ b/src/SITE/ProductCategoryBundle/Resources/views/Default/search.html.twig
@@ -47,7 +47,7 @@
                         <option value="Estampados" {% if cor == 'Estampados' %}selected{% endif %}>Estampados</option>
                         {% for Cor in Cores %}
                             {% if 'estampa' not in Cor.name|lower %}
-                                <option value="{{ Cor.name }}" {% if cor == Cor.name %}selected{% endif %}>{{ Cor.name }}</option>
+                                <option value="{{ Cor.name }}" {% if cor == Cor.name %}selected{% endif %}>{{ Cor.code }} - {{ Cor.name }}</option>
                             {% endif %}
                         {% endfor %}
                     </select>
