--- a/src/SITE/PageBundle/Resources/views/Default/about.html.twig
+++ b/src/SITE/PageBundle/Resources/views/Default/about.html.twig
@@ -11,44 +11,7 @@
     <main>
 
         <div class="wrapper">
-            <header class="header-interna">
-                <h2>DOUAT TÊXTIL<span><br>A MALHA QUE MOVIMENTA VOCÊ.</span></h2>
-            </header>
-            <article class="texto-sobre">
-                <p><strong class="tit-sobre">A trama que envolve histórias há mais de 40 anos.</strong></p>
-                <p>
-                    A Douat Têxtil Ltda. iniciou em 1973 como pioneira na indústria de texturização de fios sintéticos em Santa Catarina. E logo nos anos seguintes, a Douat reestruturou-se para começar sua atuação como malharia.
-                </p>
-                <p><strong class="tit-sobre">Movimentando novos segmentos.</strong></p>
-                <p>
-                    Com foco na produção de malha sintética para a confecção de uniformes escolares, a Douat tornou-se referência nacional no setor. Em seguida, expandiu também na fabricação de produtos para a moda feminina, masculina e esportiva. A sua produção expandiu com artigos tecnológicos, atuando na fabricação de malhas destinadas também aos segmentos fitness, lingerie, e praia dentro do universo feminino, masculino e infantil.
-                </p>
-                <p><strong class="tit-sobre">Estrutura e capacidade para tecer qualidade.</strong></p>
-                <p>
-                    Com investimento em uma tinturaria completa em seu parque fabril, onde a capacidade mensal ultrapassa 200 toneladas, a Douat tem como especialidade a fabricação de malhas em poliamida. Contamos com modernos laboratórios e um rigoroso controle de qualidade.
-                </p>
-                <p><strong class="tit-sobre">Tradição e tecnologia para movimentar o mercado.</strong></p>
-                <p>
-                    A experiência na fabricação de malhas para a linha escolar proporcionou a expansão no ramo de confecção, levando a Douat Têxtil a participar de processos licitatórios para o fornecimento de uniformes escolares para todo o Brasil. Com a aquisição de novos teares para a fabricação de malhas finas, possibilitou o desenvolvimento de malhas destinadas ao segmento de lingerie.
-                </p>
-                <p><strong class="tit-sobre">Crescimento com responsabilidade.</strong></p>
-                <p>
-                    Com uma política de qualidade que valoriza o respeito da Douat Têxtil pelo meio ambiente, todos os setores da empresa preocupam-se constantemente em otimizar processos e dar prioridade ao desenvolvimento sustentável. Toda a água utilizada no processo produtivo passa por uma estação de tratamento de efluentes e retorna à natureza de acordo com as normas vigentes de licenciamento ambiental.
-                </p>
-                <p><strong class="tit-sobre">Movimentando-se constantemente pela evolução.</strong></p>
-                <p>
-                    Investir em tecnologias que apresentam novidades em malhas e estampas faz parte da evolução contínua da empresa. A cada estação, a equipe de desenvolvimento Douat prepara-se para atender clientes em todo o Brasil elevando a variedade, qualidade e a apresentação de artigos nos segmentos Fitness, Escolar e Lingerie.
-                </p>
-                <p><strong class="tit-sobre">Política de Qualidade Douat.</strong></p>
-                <p>
-                    A Douat Têxtil Ltda., através do Sistema de Qualidade, busca excelência organizacional e liderança no mercado, tendo como princípios:<br>
-                    &bull; Desenvolver, produzir e disponibilizar produtos e serviços que superem as expectativas de seus clientes e, constantemente, investir e reformular seus processos, bem como qualificar seus fornecedores;<br>
-                    &bull; Valorizar os ambientes de trabalho, contribuindo para o desenvolvimento dos colaboradores, de maneira a ampliar seus conhecimentos e comprometimentos;<br>
-                    &bull; Respeitar o meio ambiente – atendendo à Legislação vigente – otimizando processos, primando pelo desenvolvimento sustentável da empresa, o que reverte na satisfação da comunidade.
-                </p>
-            </article>
-
-
+            {{ texto | raw }}
         </div>
         {% include 'site/footer.html.twig' %}
 
