--- a/src/CMS/UserBundle/Resources/views/User/index.html.twig
+++ b/src/CMS/UserBundle/Resources/views/User/index.html.twig
@@ -1,4 +1,4 @@
-{% extends "::admin_template.html.twig" %}
+{% extends '::admin_template.html.twig' %}
 
 {% block title %}Listando Usuários | {% endblock %}
 
@@ -14,7 +14,7 @@
         <div class="widget widget-body-white widget-heading-simple">
             <div class="widget-body">
                 <!-- Table -->
-                <table class="dynamicTable tableTools table table-striped checkboxs">
+                <table class="table table-striped checkboxs">
                     <!-- Table heading -->
                     <thead>
                     <tr>
@@ -58,10 +58,56 @@
                     <!-- // Table body END -->
                 </table>
                 <!-- // Table END -->
+
+                {% if num_rows > 10 %}
+                    {% set pages = (num_rows/10)|round(0, 'ceil') %}
+
+                    {% if page > 1 %}
+                        {% set prev = page - 1 %}
+                    {% else %}
+                        {% set prev = 1 %}
+                    {% endif %}
+
+                    {% if page < pages %}
+                        {% set next = page + 1 %}
+                    {% else %}
+                        {% set next = pages %}
+                    {% endif %}
+
+                    <div class=" margin-none">
+                        <ul style="float: right;" class="pagination pagination-right margin-none">
+                            <li {% if page == 1 %}{{ 'class="disabled"' }}{% endif %}><a href="{{ path('cms_user_paginate',{'page': 1}) }}">«</a></li>
+                            <li {% if page == 1 %}{{ 'class="disabled"' }}{% endif %}><a href="{{ path('cms_user_paginate',{'page': prev}) }}">&lsaquo;</a></li>
+                            
+                            {% if page > 7 and (page + 7) < pages %}
+                                {% set inicio = page - 7 %}
+                                {% set fim = page + 7 %}
+                            {% elseif page > 7 and (page + 7) >= pages %}
+                                {% set inicio = pages - 15 %}
+                                {% set fim = pages %}
+                            {% else %}
+                                {% set inicio = 1 %}
+                                {% set fim = pages %}
+                            {% endif %}
+
+                            {% if inicio < 1 %}
+                                {% set inicio = 1 %}
+                            {% endif %}
+
+                            {% for i in inicio..fim %}
+                                <li {% if i == page %}{{ 'class="active"' }}{% endif %}><a href="{{ path('cms_user_paginate',{'page': i}) }}">{{ i }}</a></li>
+                            {% endfor %}
+                            <li {% if page == pages %}{{ 'class="disabled"' }}{% endif %}><a href="{{ path('cms_user_paginate',{'page': next}) }}">&rsaquo;</a></li>
+                            <li {% if page == pages %}{{ 'class="disabled"' }}{% endif %}><a href="{{ path('cms_user_paginate',{'page': pages}) }}">»</a></li>
+                        </ul>
+                        <div style="clear: both;"></div>
+                    </div>
+                {% endif %}
+
             </div>
         </div>
         <a class="btn btn-primary" href="{{ path('cms_user_new') }}"> Adicionar novo </a>
-        <button type="submit" class="btn btn-danger delete">
+        <button type="submit" class="btn btn-danger delete btn-delete-from-list">
             Excluir selecionados
         </button>
     </form>
