- Adicionado controles de imagens de fundo nas paginas do CMS. - Adicionado um autoloader (DataFixture) para Paginas. - Alteradas as paginas: (A Douat, Servicos Prestados, Nossas Malhas,   Fitness, Escolar, Lingerie, Praia) para mostrar as imagens de fundo selecionadas no CMS.

--- a/app/Resources/views/site/base.html.twig
+++ b/app/Resources/views/site/base.html.twig
@@ -11,7 +11,7 @@
 </script>
 
 </head>
-<body class="{% block body_class %}page-home{% endblock %}">
+<body class="{% block body_class %}page-home{% endblock %}" style="{% block body_style %}{% endblock %}">
 
 {% include 'site/topo.html.twig'  %}
 {% block body %}{% endblock %}
