--- a/src/CMS/PageBundle/Resources/views/Paginas/edit.html.twig
+++ b/src/CMS/PageBundle/Resources/views/Paginas/edit.html.twig
@@ -5,12 +5,7 @@
 {% endblock %}
 
 {% block content %}
-    <h1>
-        Editar Paginas
-                    <a class="btn btn-primary" href="{{ path('cms_paginas_new') }}">
-                Adicionar novo
-            </a>
-            </h1>
+    <h1>Editar Paginas</h1>
 
     <div class="widget widget-heading-simple widget-body-white">
         <div class="widget-body">
