--- a/src/SITE/HomeBundle/Resources/views/Default/index.html.twig
+++ b/src/SITE/HomeBundle/Resources/views/Default/index.html.twig
@@ -96,11 +96,11 @@
         </section>
 
         <section class="control-scroll secundary section" id="secundary">
-            <div class="bg-malhas malha ativo"></div>
-            <div class="bg-malhas malha-1"></div>
-            <div class="bg-malhas malha-2"></div>
-            <div class="bg-malhas malha-3"></div>
-            <div class="bg-malhas malha-4"></div>
+            <div class="bg-malhas malha ativo" style="background: url({{ asset(bg_malha) }}) no-repeat center top #333;"></div>
+            <div class="bg-malhas malha-1" style="background: url({{ asset(bg_malha_1) }}) no-repeat center top #333;"></div>
+            <div class="bg-malhas malha-2" style="background: url({{ asset(bg_malha_2) }}) no-repeat center top #333;"></div>
+            <div class="bg-malhas malha-3" style="background: url({{ asset(bg_malha_3) }}) no-repeat center top #333;"></div>
+            <div class="bg-malhas malha-4" style="background: url({{ asset(bg_malha_4) }}) no-repeat center top #333;"></div>
             <div class="limiter limiter-secundary">
                 <div class="wrapper">
                     <article>
