--- a/src/SITE/PageBundle/Resources/views/Default/about.html.twig
+++ b/src/SITE/PageBundle/Resources/views/Default/about.html.twig
@@ -7,6 +7,10 @@
 {% endblock %}
 
 {% block body_class %}{{ "page-sobre" }}{% endblock %}
+{% block body_style %}{{"background: url(" ~ asset(fundo) ~ ") no-repeat center top fixed;" }}{% endblock %}
+
+
+
 {% block body %}
     <main>
 
