- Adicionado novo editor de textarea. - Removendo imagens de banners. - Correções no Módulo de banner.

--- a/app/Resources/views/cms_base.html.twig
+++ b/app/Resources/views/cms_base.html.twig
@@ -19,6 +19,7 @@
         {% block stylesheets %}
             <!--[if lt IE 9]><link rel="stylesheet" href="{{ asset('cms/js/library/bootstrap/css/bootstrap.min.css') }}" /><![endif]-->
             <link rel="stylesheet" href="{{ asset('cms/css/admin/module.admin.stylesheet-complete.sidebar_type.discover.min.css') }}"/>
+            <link rel="stylesheet" href="{{ asset('cms/js/plugins/summernote/dist/summernote.css') }}"/>
             <link rel="stylesheet" href="{{ asset('cms/css/cms.css') }}"/>
 
             <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -36,6 +37,7 @@
             <script src="{{ asset('cms/js/plugins/less-js/less.min.js?v=v1.0.1') }}"></script>
             <script src="{{ asset('cms/js/modules/admin/charts/flot/assets/lib/excanvas.js?v=v1.0.1') }}"></script>
             <script src="{{ asset('cms/js/plugins/browser/ie/ie.prototype.polyfill.js?v=v1.0.1') }}"></script>
+            <script src="{{ asset('cms/js/plugins/summernote/dist/summernote.min.js') }}"></script>
 
             <script>
                 if ( /*@cc_on!@*/ false && document.documentMode === 10)
