--- a/app/Resources/views/cms_base.html.twig
+++ b/app/Resources/views/cms_base.html.twig
@@ -27,7 +27,7 @@
               <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
               <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
             <![endif]-->
-        
+
         {% endblock %}
 
         {% block javascripts %}
@@ -38,6 +38,7 @@
             <script src="{{ asset('cms/js/modules/admin/charts/flot/assets/lib/excanvas.js?v=v1.0.1') }}"></script>
             <script src="{{ asset('cms/js/plugins/browser/ie/ie.prototype.polyfill.js?v=v1.0.1') }}"></script>
             <script src="{{ asset('cms/js/plugins/summernote/dist/summernote.min.js') }}"></script>
+            <script src="{{ asset('cms/js/application.js') }}"></script>
 
             <script>
                 if ( /*@cc_on!@*/ false && document.documentMode === 10)
@@ -62,7 +63,7 @@
             </li>
         </ul>
     {% endif %}
-    
+
     <!-- Main Container Fluid -->
     <div class="container-fluid menu-hidden">
         {% block body %}{% endblock %}
