--- a/src/SITE/PageBundle/Resources/views/Default/services.html.twig
+++ b/src/SITE/PageBundle/Resources/views/Default/services.html.twig
@@ -1,7 +1,7 @@
 {% extends "::site/base.html.twig" %}
 
 {% block seo %}
-    <title>Serviços Prestados - Douat Têxtil - A malha que movimenta você</title>
+    <title>Prestação de Serviços - Douat Têxtil - A malha que movimenta você</title>
     <meta name="description" content="" />
     <meta name="keywords" content="" />
 {% endblock %}
