troca titulo servicos

--- a/src/SITE/PageBundle/Resources/views/Default/services.html.twig
+++ b/src/SITE/PageBundle/Resources/views/Default/services.html.twig
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block body_class %}{{ "page-servicos" }}{% endblock %}
-{% block body_style %}{{"background: url(" ~ asset(fundo) ~ ") no-repeat center top fixed;" }}{% endblock %}
+{% block body_style %}{{"background: url(" ~ asset(fundo) ~ ") no-repeat center top fixed #b7b7b7;" }}{% endblock %}
 
 {% block body %}
     <main>
