--- a/web/blog/wp-content/themes/douat/css/style.css
+++ b/web/blog/wp-content/themes/douat/css/style.css
@@ -1480,6 +1480,32 @@ span.upload-path {
 		font-size: 16px;
 		font-family: 'bebas_neueregular';
 	}
+#commentform textarea {
+	width: 475px;
+	margin-right: 20px;
+	font-family: 'bebas_neueregular';
+	color: #999999;
+	font-size: 18px;
+	letter-spacing: 1px;
+	padding: 10px;
+}
+.paginacao {
+	float: left;
+	width: 100%;
+}
+	.paginacao a {
+		font-family: 'bebas_neueregular';
+		font-size: 24px;
+		line-height: 24px;
+		color: #fff;
+	}
+	.paginacao .previous {
+		float: left;
+	}
+	.paginacao .future {
+		float: right;
+	}
+
 
 /* CONTENT --------------------------------------------------------- */
 
