troca fontes site

--- a/app/Resources/views/site/meta.html.twig
+++ b/app/Resources/views/site/meta.html.twig
@@ -11,6 +11,9 @@
 
         <link rel="shortcut icon" href="{{ asset('site/images/favicon_72.png') }}" type="image/x-icon">
 
+        <script type="text/javascript" src="//use.typekit.net/olx6mxm.js"></script>
+        <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+
         {% if seo %}
             {{ seo | raw}}
         {% else %}
