--- a/web/blog/wp-content/themes/douat/css/style.css
+++ b/web/blog/wp-content/themes/douat/css/style.css
@@ -358,7 +358,7 @@ p {
 			font-size: 24px;
 			color: #ffffff;
 			line-height: 32px;
-			font-family: 'AdobeGaramondProItalic';
+			font-family: "adobe-garamond-pro",Georgia;
 			letter-spacing: 1px;
 		}
 		.content-home .claro h2 {color: #000;}
@@ -420,6 +420,7 @@ p {
 	margin-left: 40px;
 	float: left;
 	padding: 5px 0 0 0;
+	display: none;
 }
 .social-footer li {
 	float: left;
@@ -983,7 +984,7 @@ main {
 	.desc-prod div p {
 		font-size: 18px;
 		color: #fff;
-		font-family: 'AdobeGaramondProItalic';
+		font-family: "adobe-garamond-pro",Georgia;
 		letter-spacing: 1px;
 		line-height: 22px;
 		padding: 0 0 40px 0;
@@ -1063,7 +1064,7 @@ main {
 	color: #fff;
 	letter-spacing: 1px;
 	line-height: 28px;
-	font-family: 'AdobeGaramondProItalic';
+	font-family: "adobe-garamond-pro",Georgia;
 	padding: 0 0 28px 0;
 }
 	.intro-form a {
@@ -1205,7 +1206,7 @@ span.upload-path {
 	line-height: 32px;
 	float: left;
 	width: 675px;
-	font-family: 'AdobeGaramondProItalic';
+	font-family: "adobe-garamond-pro",Georgia;
 	padding: 0 0 40px 0;
 }
 	.texto-sobre .tit-sobre {
@@ -1230,7 +1231,7 @@ span.upload-path {
 .texto-servicos .desc {
 	font-size: 24px;
 	color: #ffffff;
-	font-family: 'AdobeGaramondProItalic';
+	font-family: "adobe-garamond-pro",Georgia;
 	width: 650px;
 	line-height: 30px;
 	padding: 0 0 70px 0;
@@ -1238,7 +1239,7 @@ span.upload-path {
 .texto-servicos .desc-bottom {
 	font-size: 24px;
 	color: #ffffff;
-	font-family: 'AdobeGaramondProItalic';
+	font-family: "adobe-garamond-pro",Georgia;
 	width: 650px;
 	line-height: 30px;
 	padding: 0 0 20px 0;
@@ -1277,7 +1278,7 @@ span.upload-path {
 	.lista-servicos p {
 		font-size: 24px;
 		color: #ffffff;
-		font-family: 'AdobeGaramondProItalic';
+		font-family: "adobe-garamond-pro",Georgia;
 		line-height: 30px;
 		padding: 20px 0 0 0;
 		clear: both;
@@ -1316,7 +1317,14 @@ span.upload-path {
 	float: left;
 	width: 700px;
 	padding: 0 20px 0 0;
+	color: #fff;
+	font-family: "adobe-garamond-pro",Georgia;
+	font-size: 16px;
 }
+	.conteudo-blog a {
+		color: #fff;
+		text-decoration: underline;
+	}
 
 .topo-blog {
 	float: left;
@@ -1342,10 +1350,25 @@ span.upload-path {
 		font-size: 24px;
 		color: #ffffff;
 		line-height: 32px;
-		font-family: 'AdobeGaramondProItalic';
+		font-family: "adobe-garamond-pro",Georgia;
+		font-style: italic;
 		letter-spacing: 1px;
 	}
 
+.more-link {
+	font-family: 'bebas_neueregular';
+	font-size: 22px;
+	line-height: 22px;
+	color: #fff;
+	float: left;
+	text-transform: uppercase;
+	letter-spacing: 0px;
+	text-decoration: none !important;
+	width: 100%;
+	height: auto !important;
+	text-indent: 0 !important;
+	margin: 15px 0 0 0;
+}
 .postWrapper {
 	float: left;
 	width: 100%;
@@ -1362,6 +1385,7 @@ span.upload-path {
 	width: 100%;
 	height: auto !important;
 	text-indent: 0 !important;
+	text-decoration: none !important;
 }
 .data {
 	float: left;
@@ -1372,14 +1396,14 @@ span.upload-path {
 	font-family: 'bebas_neuebook';
 	letter-spacing: 0.5px;
 }
-	.data a {color: #fff;}
+	.data a {color: #fff; text-decoration: none;}
 	.data a:hover {text-decoration: underline;}
 
 .post {
 	font-size: 18px;
 	color: #ffffff;
 	line-height: 22px;
-	font-family: 'AdobeGaramondProItalic';
+	font-family: "adobe-garamond-pro",Georgia;
 	letter-spacing: 0.5px;
 }
 	.post p, .post ul {
@@ -1393,6 +1417,11 @@ span.upload-path {
 		float: left;
 		width: 100%;
 	}
+
+#posts .post {
+	font-style: italic;
+	font-size: 20px;
+}
 
 .sidebar-blog {
 	float: left;
@@ -1460,7 +1489,7 @@ span.upload-path {
 		font-size: 18px;
 		color: #ffffff;
 		line-height: 22px;
-		font-family: 'AdobeGaramondProItalic';
+		font-family: "adobe-garamond-pro",Georgia;
 		letter-spacing: 0.5px;
 	}
 
