--- a/app/Resources/views/site/base.html.twig
+++ b/app/Resources/views/site/base.html.twig
@@ -25,8 +25,8 @@
             $('#fullpage').fullpage({
                 verticalCentered: false,
                 resize : true,
-                scrollingSpeed: 700,
-                easing: 'easeInQuart',
+                scrollingSpeed: 1200,
+                easing: 'easeInOutCubic',
                 navigationTooltips: ['inicio', 'categorias'],
                 anchors:['inicio', 'categorias'],
                 slidesNavigation: true,
