--- a/src/SITE/RepresentantesBundle/Resources/views/Default/index.html.twig
+++ b/src/SITE/RepresentantesBundle/Resources/views/Default/index.html.twig
@@ -57,5 +57,6 @@
 {% block pageScripts %}
     <script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=true"></script>
     <script type="text/javascript" src="{{ asset('site/js/infobox.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('site/js/markerclusterer.js') }}"></script>
     <script type="text/javascript" src="{{ asset('site/js/maps.js?1') }}"></script>
 {% endblock %}
